feat: add service api logic
